Add initial button values

--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="calcWrapper">
+    <div class="inputScreen">
+      <div class="inputValue">100</div>
+    </div>
+    <div class="buttonWrapper">
+      <div class="cell" id="clear">C</div>
+      <div class="cell"id="del">del</div>
+      <div class="cell"id="7">7</div>
+      <div class="cell"id="8">8</div>
+      <div class="cell"id="9">9</div>
+      <div class="cell"id="divide">/</div>
+      <div class="cell"id="4">4</div>
+      <div class="cell"id="5">5</div>
+      <div class="cell"id="6">6</div>
+      <div class="cell"id="multiply">*</div>
+      <div class="cell"id="1">1</div>
+      <div class="cell"id="2">2</div>
+      <div class="cell"id="3">3</div>
+      <div class="cell"id="minus">-</div>
+      <div class="cell"id="dot">.</div>
+      <div class="cell"id="0">0</div>
+      <div class="cell"id="equal">=</div>
+      <div class="cell"id="add">+</div>
+    </div>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
