--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 <body>
   <div class="calcWrapper">
     <div class="inputScreen">
-      <div class="inputValue">100</div>
+      <h3 class="inputValue">100</h3>
     </div>
     <div class="buttonWrapper">
-      <div class="cell" id="clear">AC</div>
-      <div class="cell"id="invert">+/-</div>
-      <div class="cell"id="%">%</div>
-      <div class="cell"id="divide">/</div>
-      <div class="cell"id="7">7</div>
-      <div class="cell"id="8">8</div>
-      <div class="cell"id="9">9</div>
-      <div class="cell"id="multiply">*</div>
-      <div class="cell"id="4">4</div>
-      <div class="cell"id="5">5</div>
-      <div class="cell"id="6">6</div>
-      <div class="cell"id="minus">-</div>
-      <div class="cell"id="1">1</div>
-      <div class="cell"id="2">2</div>
-      <div class="cell"id="3">3</div>
-      <div class="cell"id="add">+</div>
-      <div class="cell"id="0">0</div>
-      <div class="cell"id="dot">.</div>
-      <div class="cell"id="equals">=</div>
+      <button class="cell" id="clear">AC</button>
+      <button class="cell"id="invert">+/-</button>
+      <button class="cell"id="%">%</button>
+      <button class="cell oper" id="divide">/</button>
+      <button class="cell num" id="7">7</button>
+      <button class="cell num" id="8">8</button>
+      <button class="cell num" id="9">9</button>
+      <button class="cell oper" id="multiply">*</button>
+      <button class="cell num" id="4">4</button>
+      <button class="cell num" id="5">5</button>
+      <button class="cell num" id="6">6</button>
+      <button class="cell oper" id="minus">-</button>
+      <button class="cell num" id="1">1</button>
+      <button class="cell num" id="2">2</button>
+      <button class="cell num" id="3">3</button>
+      <button class="cell oper" id="add">+</button>
+      <button class="cell" class="num" id="0">0</button>
+      <button class="cell"id="dot">.</button>
+      <button class="cell"id="equals">=</button>
       
     </div>
     </div>
